--- a/public/action.html
+++ b/public/action.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create or join meeting</title>
-    <link rel="stylesheet" href="public/Assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Assets/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="/public/Assets/css/materialize.min.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/public/Assets//css/styles.css">
+    <link rel="stylesheet" href="Assets//css/styles.css">
 </head>
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg">
         <a href="#" class="navbar-brand text-dark">
-            <img class="logo" src="public/Assets/images/google-meet-icon.png" alt="">
+            <img class="logo" src="Assets/images/google-meet-icon.png" alt="">
             <span class="icon-text">Google Meet Demo</span>
         </a>
 
@@ -81,7 +81,7 @@
             </div>
             
             <div class="container w-50">
-                <img src="public/Assets/images/google-meet-people.jpg" class="signin-image">
+                <img src="Assets/images/google-meet-people.jpg" class="signin-image">
             </div>
         </div>
     </main>
